# craftisan

./: .gitignore  .setup.py  build_deb.sh  craftisan.ini  install.sh  pyproject.toml
debian/: changelog  control  debhelper-build-stamp  files  python3-craftisan.postinst.debhelper  python3-craftisan.prerm.debhelper  rules
debian/python3-craftisan/DEBIAN/: control  md5sums  postinst  prerm
src/craftisan/: craftisan.yml  test.db  test.old.db
src/craftisan/actions/: extraction_actions.py
src/craftisan/plugins/: tool_db_backend copy.py  tool_db_backend.py  tool_table_v2 copy.py
src/craftisan/styles/: tecno.qss
src/craftisan/tecno/: __init__.py  install.sh  tecno_manager.py
src/craftisan/tecno/widgets/: __init__.py  tree_view.py
src/craftisan/tecno/widgets/managers/: db_changes.py
src/craftisan/tool_db/: base.py  queries.py
src/craftisan/tool_db/migrations/: bytes2img.py  tree_icons_old.py
src/craftisan/ui/: about_tecno.ui  about_tecno_ui.py  about_ui.py  craftisan.ui  craftisan_ui.py
src/craftisan/ui/dialogs/tool_db/: test.json  test_tree_id2.json  test_unasigned.json  (+1 more)
src/craftisan/ui/ui_bkp/: craftisan_pre.ui.bkp  craftisan_v3.ui.bkp
src/craftisan/ui/windows/: tree_export.py
src/craftisan/utilities/: worker.py
src/widgets/hal_widgets/: __init__.py  color_preview.py  hal_button.py  hal_color_spinbox.py
src/widgets/misc/: __init__.py  file_path_lineedit.py  file_system_table.py
src/widgets/program_table/: test_stack.py
src/widgets/tool_changer/: test_eval.py
src/widgets/tool_changer/tool_table/: __init__.py  tool_table_view.py
(+56 files in other folders)
