[build-system]
requires = ["poetry-core", "versioneer[toml]"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "craftisan"
authors = [
  "Bozhidar Yunchov <bobi.iv.yu@gmail.com>"
]
description = "craftisan - A QtPyVCP based Virtual Control Panel for LinuxCNC"
readme = "README.md"
version = "0.0.3"

packages = [
    { include = "craftisan", from = "src" },
    { include = "widgets", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
craftisan = "craftisan:main"
tecno = "craftisan.tecno.tecno:main"

[tool.poetry.plugins]

[tool.poetry.plugins."qtpyvcp.vcp"]
craftisan = "craftisan"

[tool.poetry.plugins."qtpyvcp.widgets"]
craftisan_widgets = "widgets"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/craftisan/_version.py"
versionfile_build = "craftisan/_version.py"
tag_prefix = ""
parentdir_prefix = ""
